[metadata]
name = classifier-checker
author = Thomas Rooijakkers
author_email = thomas.rooijakkers@tno.nl
maintainer = Thomas Rooijakkers
maintainer_email = thomas.rooijakkers@tno.nl
description = Classifier-checker validates configured classifiers for you!
classifiers =
   License :: OSI Approved :: MIT License
   Programming Language :: Python :: 3
   Operating System :: OS Independent
   Intended Audience :: Developers
   Intended Audience :: System Administrators
   Typing :: Typed
license = MIT License
license_files = LICENSE
platform = any
keywords =
    classifier
    checker
    check
    validate
    validation
url = https://github.com/ThomasTNO/classifier-checker
download_url = https://pypi.org/project/classifier-checker/#files
project_urls =
    Source Code = https://github.com/ThomasTNO/classifier-checker
version = attr: classifier_checker.__version__
long_description_content_type = text/markdown
long_description = file: README.md

[options]
packages = classifier_checker
package_dir =
    classifier_checker = src
zip_safe = False
install_requires =
    trove-classifiers

[options.entry_points]
console_scripts = 
    classifier-checker = classifier_checker:main

[options.package_data]
classifier_checker = py.typed